cabal-version:      3.4
name:               artisanal-servant-exceptions
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable artisanal-servant-exceptions
    import:           warnings
    main-is:          Main.hs
    other-modules:
        StackTrace
        RIO
    -- other-extensions:
    build-depends:    
        base,
        servant,
        servant-server,
        transformers,
        mtl,
        warp,
        unliftio-core
    hs-source-dirs:   app
    default-language: GHC2021
    build-depends:
